feat: initial commit

--- a/desafio01-frontend/index.html
+++ b/desafio01-frontend/index.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- <link href="/tailwind.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    /> -->
+    <link rel="stylesheet" href="../desafio01-frontend/css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>WWCode Recife - Challenges</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    Get insights that help your business grow. Discover the benefits of data
-    analytics and make better decisions regarding revenue, customer experience,
-    and overall efficiency. 10k+ companies 314 templates 12m+ queries
+    <main>
+      <div class="container">
+        <section class="content-section">
+          <h2>Your Name</h2>
+          <p>
+            Mussum Ipsum, cacilds vidis litro abertis. Pra lá , depois divoltis
+            porris, paradis. Sapien in monti palavris qui num significa nadis i
+            pareci latim. Vehicula non. Ut sed ex eros. Vivamus sit amet nibh
+            non tellus tristique interdum. Manduma pindureta quium dia nois
+            paga.
+          </p>
+          <img
+            src="../desafio01-frontend/images/placeholder.jpeg"
+            alt="Mulher com um computador "
+          />
+        </section>
+        <div class="image-section"></div>
+        <ul>
+          <li>
+            <img src="../desafio01-frontend/images/icons/github.svg" alt="" />
+          </li>
+          <li>
+            <img
+              src="../desafio01-frontend/images/icons/instagram.svg"
+              alt=""
+            />
+          </li>
+          <li>
+            <img src="../desafio01-frontend/images/icons/linkedin.svg" alt="" />
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
